@@ -106,23 +106,11 @@ PKG_CHECK_MODULES(LIBAVCODEC REQUIRED libavcodec>=56.1.0)
 PKG_CHECK_MODULES(LIBAVFORMAT REQUIRED libavformat>=56.1.0)
 PKG_CHECK_MODULES(LIBSWSCALE REQUIRED libswscale>=3.0.0)
 PKG_CHECK_MODULES(LIBAVFILTER REQUIRED libavfilter>=5.40.0)
-IF (LIBAVUTIL_FOUND AND LIBAVCODEC_FOUND AND LIBAVFORMAT_FOUND AND LIBSWSCALE_FOUND AND LIBAVFILTER_FOUND)
+PKG_CHECK_MODULES(LIBSWRESAMPLE libswresample>=2.0.0)
+IF (LIBAVUTIL_FOUND AND LIBAVCODEC_FOUND AND LIBAVFORMAT_FOUND AND LIBSWSCALE_FOUND AND LIBAVFILTER_FOUND AND LIBSWRESAMPLE_FOUND)
     message( "--   Sufficiently recent FFmpeg library version found." )
     set(HAVE_FFMPEG 1)
 ENDIF (LIBAVUTIL_FOUND AND LIBAVCODEC_FOUND AND LIBAVFORMAT_FOUND AND LIBSWSCALE_FOUND AND LIBAVFILTER_FOUND)
-
-PKG_CHECK_MODULES(LIBAVRESAMPLE libavresample>=2.1.0)
-PKG_CHECK_MODULES(LIBSWRESAMPLE libswresample>=2.0.0)
-
-IF (LIBSWRESAMPLE_FOUND)
-    set(USE_LIBSWRESAMPLE 1)
-ENDIF (LIBSWRESAMPLE_FOUND)
-IF (LIBAVRESAMPLE_FOUND)
-    set(USE_LIBAVRESAMPLE 1)
-ENDIF (LIBAVRESAMPLE_FOUND)
-IF (NOT USE_LIBSWRESAMPLE AND NOT USE_LIBAVRESAMPLE)
-    message( FATAL_ERROR "Either libswresample or libavresample must be present and enabled. Please make sure its development modules are installed." )
-ENDIF (NOT USE_LIBSWRESAMPLE AND NOT USE_LIBAVRESAMPLE)
 
 PKG_CHECK_MODULES(LIBDVDREAD dvdread>=5.0.0)
 PKG_CHECK_MODULES(LIBBLURAY libbluray>=0.6.2)
@@ -744,16 +732,6 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
     -DUSE_LIBBLURAY=1
 )
 ENDIF (LIBBLURAY_FOUND)
-IF (LIBSWRESAMPLE_FOUND)
-target_compile_definitions(${PROJECT_NAME} PUBLIC
-    -DUSE_LIBSWRESAMPLE=1
-)
-ENDIF (LIBSWRESAMPLE_FOUND)
-IF (LIBAVRESAMPLE_FOUND)
-target_compile_definitions(${PROJECT_NAME} PUBLIC
-    -DUSE_LIBAVRESAMPLE=1
-)
-ENDIF (LIBAVRESAMPLE_FOUND)
 
 target_link_libraries(${PROJECT_NAME}
     pthread
@@ -762,8 +740,6 @@ target_link_libraries(${PROJECT_NAME}
     avformat
     avcodec
     avutil
-    #avresample
-    #avdevice
     swscale
     swresample
     chardet
