@@ -8,26 +8,14 @@ ffmpegfs_SOURCES = ffmpegfs.cc ffmpegfs.h fuseops.cc transcode.cc transcode.h ca
 ffmpegfs_LDADD = $(libcue_LIBS) $(fuse_LIBS) -lrt
 
 ffmpegfs_SOURCES += ffmpeg_base.cc ffmpeg_base.h ffmpeg_transcoder.cc ffmpeg_transcoder.h ffmpeg_utils.cc ffmpeg_utils.h ffmpeg_profiles.cc
-ffmpegfs_LDADD += $(libavcodec_LIBS) $(libavutil_LIBS) $(libavformat_LIBS) $(libswscale_LIBS) $(libavfilter_LIBS)
-AM_CPPFLAGS += $(libavcodec_CFLAGS) $(libavutil_CFLAGS) $(libavformat_CFLAGS) $(libswscale_CFLAGS) $(libavfilter_CFLAGS)
+ffmpegfs_LDADD += $(libavcodec_LIBS) $(libavutil_LIBS) $(libavformat_LIBS) $(libswscale_LIBS) $(libavfilter_LIBS) $(libswresample_LIBS)
+AM_CPPFLAGS += $(libavcodec_CFLAGS) $(libavutil_CFLAGS) $(libavformat_CFLAGS) $(libswscale_CFLAGS) $(libavfilter_CFLAGS) $(libswresample_CFLAGS)
 
 # Add sqlite3
 ffmpegfs_LDADD += $(sqlite3_LIBS)
 # Add libchardet
 AM_CPPFLAGS += $(chardet_CFLAGS)
 ffmpegfs_LDADD += $(chardet_LIBS)
-
-if USE_LIBSWRESAMPLE
-AM_CPPFLAGS += -DUSE_LIBSWRESAMPLE
-AM_CPPFLAGS += $(libswresample_CFLAGS)
-ffmpegfs_LDADD += $(libswresample_LIBS)
-endif
-
-if USE_LIBAVRESAMPLE
-AM_CPPFLAGS += -DUSE_LIBAVRESAMPLE
-AM_CPPFLAGS += $(libavresample_CFLAGS)
-ffmpegfs_LDADD += $(libavresample_LIBS)
-endif
 
 # DVD support: requires both libdbdnav and libdvdread
 if USE_LIBDVD
