@@ -12,6 +12,8 @@ Important changes in 2.10 (2022-03-XX):
 * Enhancement:
 * Bugfix: Fixed memory leak in encode_audio_frame().
 * Bugfix: Issue #122: Last song was missing from cuesheet files.
+* Lowest supported FFmpeg API version raised to 4.1.8 "al-Khwarizmi".
+* Dropped libavresample support, library was removed from FFmpeg API after 3.4.9.
 
 Important changes in 2.9 (2022-02-16):
 
